# PixelPlatformerSDL

./: CMakeLists.txt  LICENSE  README.md
include/: Game.h  Inventory.h  InventoryUI.h  Player.h  World.h
src/: Game.cpp  Inventory.cpp  InventoryUI.cpp  Player.cpp  World.cpp  main.cpp
